Put ViewController and Presenter under tests

--- a/Next/Base.lproj/Todo.storyboard
+++ b/Next/Base.lproj/Todo.storyboard
@@ -74,7 +74,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="dcq-xJ-Wc9" id="nsY-EY-DHj"/>
+                        <outlet property="tableView" destination="dcq-xJ-Wc9" id="2dh-zj-Rcj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
